--- a/main.html
+++ b/main.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
- 
+
 <html>
- 
+
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
- 
+
 <body>
-    <div class="holder">
-    	<div class="item item-1">1</div>
-    	<div class="item item-2">2</div>
-    	<div class="item item-3">3</div>
-    	<div class="item item-4">4</div>
-   </div>
-   <script type="text/javascript" src="./script.js">
+	<section class="holder">
+        <div class="item item1">1</div>
+        <div class="item item2">2</div>
+        <div class="item item3">3</div>
+        <div class="item item4">3</div>
+        <div class="item item5">3</div>
+        <div class="item item6">3</div>
+        <div class="item item7">3</div> 
+    </section>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
 </script>
- 
+
 </body>
- 
+
 </html>
